<resources>
    <string name="app_name">UHF Reader</string>
    <string name="textHello">Dashboard</string>
    <string name="textUsername">DediSlamet</string>
    <string name="nama">Dedi Slamet</string>
    <string name="trending">TRENDING</string>
    <string name="dummy_text">Scan tanpa ribet!! RFID solusinya..</string>
    <string name="action_settings">Settings</string>
    <string name="action_uhf">About Uhf</string>
    <string name="action_about">About App</string>
    <string name="membank">membank</string>
    <string name="password">Password</string>
    <string name="filtrate_data_">Filtrate Data:</string>
    <string name="inversion">Inversion</string>
    <string name="_more_tags">InventoryEPC</string>
    <string name="single_tag">ReadAndWrite</string>
    <string name="set">Set</string>
    <string name="start">Start</string>
    <string name="stopping">Stopping</string>
    <string name="clear">Clear</string>
    <string name="exit">Exit</string>
    <string name="buzzer">Buzzer</string>
    <string name="intermission">Intermission</string>
    <string name="filter">Filter</string>
    <string name="singletag">SingleTag</string>
    <string name="open">Open</string>
    <string name="count">Count</string>
    <string name="rssi">RSSI</string>
    <string name="epc">EPC</string>
    <string name="id">ID</string>
    <string name="number">Number:</string>
    <string name="time">Time：</string>
    <string name="epc_">EPC:</string>
    <string name="writedata_">WriteData:</string>
    <string name="readdata">ReadData:</string>
    <string name="getepc">GetEPC</string>
    <string name="read">read</string>
    <string name="write">write</string>
    <string name="read_power_dbm_">Read Power(dbm):</string>
    <string name="write_power_dbm_">Write Power(dbm):</string>
    <string name="freqregion_">FreqRegion:</string>
    <string name="get_all_">Get(all)</string>
    <string name="get_now_">Get(now)</string>
    <string name="freqpoints_">FreqPoints:</string>
    <string name="frequency_points_select_">Frequency points select >></string>
    <string name="get">Get</string>
    <string name="restart">Restart</string>
    <string name="close">Close</string>
    <string name="clear_success_">Clear success!</string>
    <string name="init_rfid_success_">Init Rfid Success!</string>
    <string name="init_rfid_fail_">Init Rfid Fail!</string>
    <string name="stop">Stop</string>
    <string name="get_epc_success_">Get EPC Success!</string>
    <string name="get_epc_fail_">Get EPC Fail!</string>
    <string name="_read_data_">\nRead Data:</string>
    <string name="read_success_">Read Success!</string>
    <string name="read_fail_">Read Fail!</string>
    <string name="write_data_success_">Write Data Success!</string>
    <string name="write_data_fail_">Write Data Fail!</string>
    <string name="please_get_epc_first_">Please get epc first!</string>
    <string name="set_read_power_success_now_power_">Set read power success！\nNow power：</string>
    <string name="set_read_power_fail_">Set read power fail！</string>
    <string name="set_write_power_success_now_power_">Set write power success！\nNow power：</string>
    <string name="set_write_power_fail_">Set  write power fail！</string>
    <string name="get_fail_">Get Fail!</string>
    <string name="get_success_">Get Success:\n</string>
    <string name="set_fail_">Set fail!</string>
    <string name="are_you_sure_to_restart_">Are you sure to restart ?</string>
    <string name="sure">Sure</string>
    <string name="restart_success_">Restart success!</string>
    <string name="cancel">Cancel</string>
    <string name="select_frequency_points_">Select Frequency points:</string>
    <string name="cancle">Cancel</string>
    <string name="quit_on_double_click_">Quit On Double-Click!</string>
    <string name="times">Times:</string>
    <string name="speed">Speed:</string>
    <string name="readtime">ReadTime:</string>
    <string name="sleeptime">SleepTime:</string>
    <string name="ms">ms</string>
    <string name="setintermissiontime">Set Intermission Time:</string>
    <string name="search_articles_hint">Pencarian</string>
    <string name="tambah">Enter</string>
    <string name="start_inventory_epc">Start Scan</string>
    <string name="stop_inventory_epc">Stop Scan UHF</string>
    <string name="all_epc_sum">Total Scan:</string>
    <string name="all_epc_count">Count:</string>
    <string name="multi_mode">Multi mode</string>
    <string name="single_mode">Single mode</string>
    <string name="more_operation">More operation</string>
    <string name="inventory_epc">Inventory EPC</string>
    <string name="read_write_tag">Read Write Tag</string>
    <string name="para_settings">Para Settings</string>
    <string name="read_power">Read power:</string>
    <string name="write_power">Write power:</string>
    <string name="get_">Get</string>
    <string name="setting_">Settings</string>
    <string name="freq_area">Freq Area：</string>
    <string name="please_press_again_exit">Press back key again, exit</string>
    <string name="current_read_power">Current read power is </string>
    <string name="current_write_power">Current write power is</string>
    <string name="current_fre_band">Current frequency band is</string>
    <string name="set_success_">Set success!</string>
    <string name="freq_band">Frequency band >></string>
    <string name="select_epc">Select epc:</string>
    <string name="access_password">Access password:</string>
    <string name="membank_read_write">Membank:</string>
    <string name="start_addr">Start addr:</string>
    <string name="length">Length(word):</string>
    <string name="please_inventory_epc">Please inventory EPC</string>
    <string name="please_start_addr">Please input start address</string>
    <string name="please_access_password">Please input 4 bytes access password</string>
    <string name="please_write_data">Please input write data</string>
    <string name="please_write_data_type_error">The write data type is error</string>
    <string name="please_write_data_double_byte">Please input double bytes write data</string>
    <string name="current_version">Version name: </string>
    <string name="finish_date">Finish date: </string>
    <string name="about_soft">About sotf </string>
    <string name="lock_membank">Lock membank:</string>
    <string name="write_data">Write data(word hex):</string>
    <string name="lock_action">Lock type:</string>
    <string name="lock">Lock</string>
    <string name="lock_tag">Lock tag</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="kill">Kill</string>
    <string name="kill_tag">Kill tag</string>
    <string name="kill_password">Kill password</string>
    <string name="inituhfsuccess">Init uhf success！</string>
    <string name="inituhffail">Init uhf fail！</string>
    <string name="exiting">Exiting...</string>
    <string name="title_activity_uhf">UHF</string>
    <string name="no_search_results_found">Data tidak ditemukan</string>
    <string name="title_rugby">Rugby</string>
    <string name="title_cricket">Cricket</string>
    <string name="title_basketball">Basketball</string>
    <string name="title_hockey">Hockey</string>
    <string name="title_volleyball">Volleyball</string>
    <string name="title_esports">Esports</string>
    <string name="title_kabbadi">Kabaddi</string>
    <string name="title_baseball">Baseball</string>
    <string name="title_mma">MMA</string>
    <string name="title_soccer">Soccer</string>
    <string name="title_handball">Handball</string>
    <string name="title_tennis">Tennis</string>
    <string name="subtitle_rugby">19th century</string>
    <string name="subtitle_cricket">16th century</string>
    <string name="subtitle_basketball">December 21, 1891</string>
    <string name="subtitle_hockey">19th century</string>
    <string name="subtitle_volleyball">1895</string>
    <string name="subtitle_esports">1972</string>
    <string name="subtitle_kabbadi">1921</string>
    <string name="subtitle_baseball">1869</string>
    <string name="subtitle_mma">1993</string>
    <string name="subtitle_soccer">1863</string>
    <string name="subtitle_handball">2 December 1917</string>
    <string name="subtitle_tennis">1859</string>
    <string name="token">Token : %s</string>
    <string name="news">News</string>
    <string name="promo">Promo</string>
    <string name="show_token">Show Token</string>
    <string name="about_rugby">
        Rugby union, widely known simply as rugby, is a full contact team sport that originated in
        England in the first half of the 19th century. One of the two codes of rugby football, it is
        based on running with the ball in hand. In its most common form, a game is played between two
        teams of 15 players using an oval-shaped ball on a rectangular field called a pitch. The field
        has H-shaped goalposts at both ends.
        Rugby union is a popular sport around the world, played by male and female players of all ages.
        Rules do not differ between the sexes. In 2014, there were more than 6 million people playing
        worldwide, of whom 2.36 million were registered players. World Rugby, previously called the
        International Rugby Football Board (IRFB) and the International Rugby Board (IRB), has been
        the governing body for rugby union since 1886, and currently has 101 countries as full members
        and 18 associate members.
    </string>
    <string name="about_cricket">
        Cricket is a bat-and-ball game played between two teams of eleven players on a field at the
        centre of which is a 20-metre (22-yard) pitch with a wicket at each end, each comprising two
        bails balanced on three stumps. The batting side scores runs by striking the ball bowled at
        the wicket with the bat, while the bowling and fielding side tries to prevent this and dismiss
        each player (so they are "out"). Means of dismissal include being bowled, when the ball hits
        the stumps and dislodges the bails, and by the fielding side catching the ball after it is
        hit by the bat, but before it hits the ground. When ten players have been dismissed, the
        innings ends and the teams swap roles. The game is adjudicated by two umpires, aided by a
        third umpire and match referee in international matches. They communicate with two off-field
        scorers who record the matches statistical information.
    </string>
    <string name="simpan">Simpan</string>
</resources>