<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentBiasaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/title"
        android:text="@string/inventory_epc"
        android:background="@color/gre"
        android:textColor="@color/wr"
        android:textSize="26dp"
        android:gravity="center"
        android:layout_alignParentTop="true">
    </TextView>
    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/allbg"
        android:orientation="horizontal">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/textView_f1"
            android:layout_height="match_parent"
            android:textColor="@color/blu"
            android:text="@string/inventory_epc"
            android:textSize="20dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/textView_f2"
            android:layout_height="match_parent"
            android:textColor="@color/gre"
            android:text="@string/read_write_tag"
            android:textSize="20dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/textView_f3"
            android:layout_height="match_parent"
            android:textColor="@color/gre"
            android:text="@string/lock"
            android:textSize="20dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/textView_f4"
            android:layout_height="match_parent"
            android:textColor="@color/gre"
            android:text="@string/kill"
            android:textSize="20dp"/>
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/textView_f5"
            android:layout_height="match_parent"
            android:textColor="@color/gre"
            android:text="@string/setting_"
            android:textSize="20dp"/>
    </LinearLayout>
    <FrameLayout
        android:layout_below="@id/title"
        android:layout_above="@id/navigation"
        android:id="@+id/framelayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>
</RelativeLayout>